--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,11 @@ body, html, #root, .App {
   width: 100%;
   padding: 0px;
   margin: 0px;
+  overflow-y: hidden;
 }
 
-.Projects {
-  height: 100%;
-  background: rgba(35,35,35, 1);
+.App {
+   height: calc(100vh - 35px);
+
+  overflow-y: scroll;
 }
