--- a/src/Card.css
+++ b/src/Card.css
@@ -28,7 +28,7 @@
     margin: 0 auto;
     font-size: 20px;
     vertical-align: center;
-    border: solid black 2px;
+    border: solid rgba(35, 35, 35, 0.95) 2px;
     padding: 10px;
     background: rgba(255, 255, 255, 0.8);
     cursor: pointer;
@@ -56,7 +56,7 @@
 
 
 .Card div:hover {
-  background: rgba(1, 1, 1, 1.0);
+  background: rgba(35, 35, 35, 0.95);
   color: white;
 } 
 
