--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@ body, html, #root, .App {
   padding: 0px;
   margin: 0px;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .App {
-   height: calc(100vh - 35px);
-
+  height: calc(100vh - 35px);
   overflow-y: scroll;
 }
