--- a/src/Mountains.css
+++ b/src/Mountains.css
@@ -1,9 +1,16 @@
 .Mountains {
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
   opacity: 0.40;
   z-index: -1;
+}
+
+.Mountains #Mountains {
+  width: 100% !important;
+  height: 100% !important;
 }
 
 .noWebGL {
